--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Shard Labs",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./webpack.config.js --open --hot --inline --progress"
+    "dev": "webpack-dev-server --config ./webpack.config.js --open --hot"
   },
   "license": "ISC",
   "dependencies": {
