--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Shard Labs",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./webpack.config.js --open --hot"
+    "dev": "webpack-dev-server --config ./webpack.dev.js",
+    "build": "webpack --config ./webpack.prod.js"
   },
   "license": "ISC",
   "dependencies": {
@@ -16,8 +17,10 @@
     "@babel/preset-env": "^7.9.0",
     "babel-loader": "^8.1.0",
     "babel-preset-vue": "^2.0.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.0.4",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue-loader": "^15.9.1",
